force-app/main/default/objects/IFv2_RequestButtons__mdt/IFv2_RequestButtons__mdt.object-meta.xml
<CustomObject>
    <description>To store the list of buttons to be displayed on the request detail page based on the status of the application in InsightFlow application version 2.0</description>
    <label>Request Button</label>
    <pluralLabel>Request Buttons</pluralLabel>
</CustomObject>