force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/Absyz_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Absyz_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Absyz Workflow</label>
    <type>Checkbox</type>
</CustomField>