force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Please check the checkbox to enable this record</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>