force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/AftermarketQuotationTool__c.field-meta.xml
<CustomField>
    <fullName>AftermarketQuotationTool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AftermarketQuotationTool</label>
    <type>Checkbox</type>
</CustomField>