force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/ApprovalProcessforSpecialFreights__c.field-meta.xml
<CustomField>
    <fullName>ApprovalProcessforSpecialFreights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Process for Special Freights</label>
    <type>Checkbox</type>
</CustomField>