force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/BadgeManagementSEGStuttgart__c.field-meta.xml
<CustomField>
    <fullName>BadgeManagementSEGStuttgart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Badge Management SEG-Stuttgart</label>
    <type>Checkbox</type>
</CustomField>