force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/BookMyTaxiAndMITRA__c.field-meta.xml
<CustomField>
    <fullName>BookMyTaxiAndMITRA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Book My Taxi and MITRA</label>
    <type>Checkbox</type>
</CustomField>