force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/CapExApprovalRequest__c.field-meta.xml
<CustomField>
    <fullName>CapExApprovalRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CapEx Approval Request</label>
    <type>Checkbox</type>
</CustomField>