force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/ChinaLeaveOvertimeApplication__c.field-meta.xml
<CustomField>
    <fullName>ChinaLeaveOvertimeApplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>China Leave &amp; Overtime Application</label>
    <type>Checkbox</type>
</CustomField>