force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/ChinaMAEApplicationCapitalize__c.field-meta.xml
<CustomField>
    <fullName>ChinaMAEApplicationCapitalize__c</fullName>
    <defaultValue>false</defaultValue>
    <label>China MAE Application - Capitalize</label>
    <type>Checkbox</type>
</CustomField>