force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/ChinaMAEApplicationCombine__c.field-meta.xml
<CustomField>
    <fullName>ChinaMAEApplicationCombine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>China MAE Application - Combine</label>
    <type>Checkbox</type>
</CustomField>