force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/ChinaMAEApplicationLost__c.field-meta.xml
<CustomField>
    <fullName>ChinaMAEApplicationLost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>China MAE Application - Lost</label>
    <type>Checkbox</type>
</CustomField>