force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/ChinaMAEApplicationScrap__c.field-meta.xml
<CustomField>
    <fullName>ChinaMAEApplicationScrap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>China MAE Application - Scrap</label>
    <type>Checkbox</type>
</CustomField>