force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/ChinaMAEApplicationSplit__c.field-meta.xml
<CustomField>
    <fullName>ChinaMAEApplicationSplit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>China MAE Application - Split</label>
    <type>Checkbox</type>
</CustomField>