force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/ChinaMAEApplicationTransfer__c.field-meta.xml
<CustomField>
    <fullName>ChinaMAEApplicationTransfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>China MAE Application - Transfer</label>
    <type>Checkbox</type>
</CustomField>