force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/ChinaTrainingApplication__c.field-meta.xml
<CustomField>
    <fullName>ChinaTrainingApplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>China Training Application</label>
    <type>Checkbox</type>
</CustomField>