force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/ChinaTravelApplication__c.field-meta.xml
<CustomField>
    <fullName>ChinaTravelApplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>China Travel Application</label>
    <type>Checkbox</type>
</CustomField>