force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/Concession__c.field-meta.xml
<CustomField>
    <fullName>Concession__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concession</label>
    <type>Checkbox</type>
</CustomField>