force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/Demo_Bhanu__c.field-meta.xml
<CustomField>
    <fullName>Demo_Bhanu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo_Bhanu</label>
    <type>Checkbox</type>
</CustomField>