force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/Demo_Chai__c.field-meta.xml
<CustomField>
    <fullName>Demo_Chai__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Chai</label>
    <type>Checkbox</type>
</CustomField>