force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/DemoWorkflowRakesh__c.field-meta.xml
<CustomField>
    <fullName>DemoWorkflowRakesh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Workflow Rakesh</label>
    <type>Checkbox</type>
</CustomField>