force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/Design_Verification_Process_Approval__c.field-meta.xml
<CustomField>
    <fullName>Design_Verification_Process_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Design Verification Process Approval</label>
    <type>Checkbox</type>
</CustomField>