force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/DPDCInvoice__c.field-meta.xml
<CustomField>
    <fullName>DPDCInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DPDC Invoice</label>
    <type>Checkbox</type>
</CustomField>