force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/EmployeeClearanceProcess__c.field-meta.xml
<CustomField>
    <fullName>EmployeeClearanceProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee Clearance Process</label>
    <type>Checkbox</type>
</CustomField>