force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/EmployeeSuggestionScheme__c.field-meta.xml
<CustomField>
    <fullName>EmployeeSuggestionScheme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee Suggestion Scheme</label>
    <type>Checkbox</type>
</CustomField>