force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/EmployeeSuggestionSchemeUSMX__c.field-meta.xml
<CustomField>
    <fullName>EmployeeSuggestionSchemeUSMX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee Suggestion Scheme (US MX)</label>
    <type>Checkbox</type>
</CustomField>