force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/eSignature__c.field-meta.xml
<CustomField>
    <fullName>eSignature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eSignature</label>
    <type>Checkbox</type>
</CustomField>