force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/GeneralApprovalForm__c.field-meta.xml
<CustomField>
    <fullName>GeneralApprovalForm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General Approval Form</label>
    <type>Checkbox</type>
</CustomField>