force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/HUScrappingWorkOn__c.field-meta.xml
<CustomField>
    <fullName>HUScrappingWorkOn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HU Scrapping WorkOn</label>
    <type>Checkbox</type>
</CustomField>