force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/ICOWorkflow1__c.field-meta.xml
<CustomField>
    <fullName>ICOWorkflow1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ICO Workflow - 1</label>
    <type>Checkbox</type>
</CustomField>