force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/ICOWorkflow2__c.field-meta.xml
<CustomField>
    <fullName>ICOWorkflow2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ICO Workflow - 2</label>
    <type>Checkbox</type>
</CustomField>