force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/ICOWorkflow3__c.field-meta.xml
<CustomField>
    <fullName>ICOWorkflow3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ICO Workflow - 3</label>
    <type>Checkbox</type>
</CustomField>