force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/IFE_Process_Workflow__c.field-meta.xml
<CustomField>
    <fullName>IFE_Process_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IFE Process Workflow</label>
    <type>Checkbox</type>
</CustomField>