force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/IndirectPurchasingApproval__c.field-meta.xml
<CustomField>
    <fullName>IndirectPurchasingApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indirect Purchasing Approval</label>
    <type>Checkbox</type>
</CustomField>