force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>To store the label of the button</description>
    <inlineHelpText>Please enter the Button label to be displayed on the layout</inlineHelpText>
    <label>Label</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>