force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/Leave_Request_Prince__c.field-meta.xml
<CustomField>
    <fullName>Leave_Request_Prince__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leave_Request_Prince</label>
    <type>Checkbox</type>
</CustomField>