force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/LEXContractingSEGResourceAgreement__c.field-meta.xml
<CustomField>
    <fullName>LEXContractingSEGResourceAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LEX Contracting - SEG Resource Agreement</label>
    <type>Checkbox</type>
</CustomField>