force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/MAEApprovalRequest__c.field-meta.xml
<CustomField>
    <fullName>MAEApprovalRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MAE Approval Request</label>
    <type>Checkbox</type>
</CustomField>