force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/MaterialGatePass__c.field-meta.xml
<CustomField>
    <fullName>MaterialGatePass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Material Gate Pass</label>
    <type>Checkbox</type>
</CustomField>