force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/MaterialGatePassChild__c.field-meta.xml
<CustomField>
    <fullName>MaterialGatePassChild__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Material Gate Pass - Child</label>
    <type>Checkbox</type>
</CustomField>