force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/NAJournalEntryApplication__c.field-meta.xml
<CustomField>
    <fullName>NAJournalEntryApplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NA Journal Entry Application</label>
    <type>Checkbox</type>
</CustomField>