force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/OrderOfDisplay__c.field-meta.xml
<CustomField>
    <fullName>OrderOfDisplay__c</fullName>
    <inlineHelpText>Please enter the position of the button</inlineHelpText>
    <label>OrderOfDisplay</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>