force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/Overtime_Payment_Process_Approval__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Payment_Process_Approval__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Overtime Payment Process Approval</label>
    <type>Checkbox</type>
</CustomField>