force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/OvertimeRequest__c.field-meta.xml
<CustomField>
    <fullName>OvertimeRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OvertimeRequest</label>
    <type>Checkbox</type>
</CustomField>