force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/OvertimeRequestGermany__c.field-meta.xml
<CustomField>
    <fullName>OvertimeRequestGermany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overtime Request Germany</label>
    <type>Checkbox</type>
</CustomField>