force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/OvertimeRequestHungary__c.field-meta.xml
<CustomField>
    <fullName>OvertimeRequestHungary__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Overtime Request Hungary</label>
    <type>Checkbox</type>
</CustomField>