force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/PersonnelRequest__c.field-meta.xml
<CustomField>
    <fullName>PersonnelRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personnel Request</label>
    <type>Checkbox</type>
</CustomField>