force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/PredefinedWorkflowApprovals__c.field-meta.xml
<CustomField>
    <fullName>PredefinedWorkflowApprovals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Predefined Workflow Approvals</label>
    <type>Checkbox</type>
</CustomField>