force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/PurchasingApprovalWorkflow__c.field-meta.xml
<CustomField>
    <fullName>PurchasingApprovalWorkflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchasing Approval Workflow</label>
    <type>Checkbox</type>
</CustomField>