force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/Requestsforcorporatecard__c.field-meta.xml
<CustomField>
    <fullName>Requestsforcorporatecard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requests for corporate card</label>
    <type>Checkbox</type>
</CustomField>