force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/RestrictedZoneAccessIndia__c.field-meta.xml
<CustomField>
    <fullName>RestrictedZoneAccessIndia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restricted Zone Access India</label>
    <type>Checkbox</type>
</CustomField>