force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>To store the roles of the logged in users</description>
    <inlineHelpText>Please select the appropriate role of the User</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
                <default>true</default>
                <label>Applicant</label>
            </value>
            <value>
                <fullName>Approver</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Delegated Approver</fullName>
            </value>
            <value>
                <fullName>Privileged Approver</fullName>
            </value>
            <value>
                <fullName>Helpdesk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>