force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/Sample_Request__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Request</label>
    <type>Checkbox</type>
</CustomField>