force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/Sample_WorkFlow_R__c.field-meta.xml
<CustomField>
    <fullName>Sample_WorkFlow_R__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample WorkFlow_R</label>
    <type>Checkbox</type>
</CustomField>