force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/SampleWorkflowAkhil__c.field-meta.xml
<CustomField>
    <fullName>SampleWorkflowAkhil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Workflow Akhil</label>
    <type>Checkbox</type>
</CustomField>