force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/SCC_Workflow__c.field-meta.xml
<CustomField>
    <fullName>SCC_Workflow__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SCC Workflow</label>
    <type>Checkbox</type>
</CustomField>