force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/SGINSales__c.field-meta.xml
<CustomField>
    <fullName>SGINSales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SGIN Sales</label>
    <type>Checkbox</type>
</CustomField>