force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/ShopMe__c.field-meta.xml
<CustomField>
    <fullName>ShopMe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShopMe</label>
    <type>Checkbox</type>
</CustomField>