force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/Sign_Sales__c.field-meta.xml
<CustomField>
    <fullName>Sign_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sign Sales</label>
    <type>Checkbox</type>
</CustomField>