force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/SravaniDemoWorkflow__c.field-meta.xml
<CustomField>
    <fullName>SravaniDemoWorkflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sravani DemoWorkflow</label>
    <type>Checkbox</type>
</CustomField>