force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/test_deeksha__c.field-meta.xml
<CustomField>
    <fullName>test_deeksha__c</fullName>
    <defaultValue>false</defaultValue>
    <label>test_deeksha</label>
    <type>Checkbox</type>
</CustomField>