force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/Test_Raghu__c.field-meta.xml
<CustomField>
    <fullName>Test_Raghu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Raghu</label>
    <type>Checkbox</type>
</CustomField>