force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/TestWorkFlowVinay__c.field-meta.xml
<CustomField>
    <fullName>TestWorkFlowVinay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestWorkFlowVinay</label>
    <type>Checkbox</type>
</CustomField>