force-app/main/default/objects/IFv2_RequestButtons__mdt/fields/Workflowreleaseofdocumentedprocedure__c.field-meta.xml
<CustomField>
    <fullName>Workflowreleaseofdocumentedprocedure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Workflow release of documented procedure</label>
    <type>Checkbox</type>
</CustomField>