force-app/main/default/objects/IFv2_RequestButtons__mdt/listViews/AllRequestButtons.listView-meta.xml
<ListView>
    <fullName>AllRequestButtons</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>Label__c</columns>
    <columns>Role__c</columns>
    <columns>Status__c</columns>
    <columns>OrderOfDisplay__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Request Buttons</label>
    <language>en_US</language>
</ListView>