force-app/main/default/objects/IFv2_RequestButtons__mdt/listViews/MyView.listView-meta.xml
<ListView>
    <fullName>MyView</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Label__c</columns>
    <columns>Role__c</columns>
    <columns>Status__c</columns>
    <columns>OrderOfDisplay__c</columns>
    <columns>Active__c</columns>
    <columns>RestrictedZoneAccessIndia__c</columns>
    <columns>SCC_Workflow__c</columns>
    <filterScope>Everything</filterScope>
    <label>My View</label>
    <language>en_US</language>
</ListView>